--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
 
     <header>
-      <img class="avatar" src="photo_avatar2.png" alt="Фото">
+      <img class="avatar" src="photo_avatar2.png" alt="Person_photo">
     
       <section class="info">
       <h1>Artsiom FANDO</h1>
@@ -18,83 +18,100 @@
         <li><strong>E-mail:</strong> artsiomfando@gmail.com</li>
         <li><strong><a href="https://www.linkedin.com/in/%D0%B0%D1%80%D1%82%D0%B5%D0%BC-%D1%84%D0%B0%D0%BD%D0%B4%D0%BE-b9807670/" target="_blank">LinkedIn</a></strong></li>
       </ul>
-      </section>
+      </section>       
     </header>
 
     <main>
-      <h2 class="start">Short introduction</h2>
-      <p>
-        My goal is to become a professional Java Script developer. I've never
-        worked in this field before, but to change the area you're used to and to
-        leave a comfort zone is common practice in many Western countries. I'm
-        actually interested in this new experience, I learn fast and I've already
-        jumped in, because the main part of any process is always self-education
-        and own desire to become better.
-      </p>
-      <h2>Skills</h2>
-      <p>
-        I have a little experience in Java Script and HTML, CSS. Now I'm in a
-        learning process.
-      </p>
-      <h2>Experience</h2>
-      <p>2018. Java Fundamentals Course by IT-Academy</p>
-      <p>
-        2021. Video Course on udemy.com "The Complete JavaScript Course 2021: From
-        Zero to Expert!" by Jonas Schmedtmann
-      </p>
-      <h2>Code example</h2>
-      <p>
-        <code>
-          // Tabbed component tabsContainer.addEventListener('click', function (e)
-          {<br>
-          const clicked = e.target.closest('.operations__tab');<br>
-          <br />
-          // Guard clause<br>
-          if (!clicked) return;<br>
-          <br>
-          // Remove active classes<br>
-          tabs.forEach(t => t.classList.remove('operations__tab--active'));<br>
-          tabsContent.forEach(c => c.classList.remove('operations__content--active'));<br>
-          <br>
-          // Activate tab<br>
-          clicked.classList.add('operations__tab--active');<br>
-          <br>
-          // Activate content area<br>
-          document<br>
-          .querySelector(`.operations__content--${clicked.dataset.tab}`)<br>
-          .classList.add('operations__content--active');<br>
-          });
-        </code>
-      </p>
-      <h2>Education</h2>
-      <p>
-        2007 — 2012. Belorussian National Technical University with a degree in
-        economics
-      </p>
-      <p>
-        2012 — 2013. Belorussian National Technical University (master courses)
-      </p>
-      <p> *Graduated with excellent certificate in economics
-      </p>
-      <h2>Language</h2>
-      <p>
-        English, B2. I successfully completed Streamline English Course at Upper
-        Intermediate level in 2019.
-      </p>
-      <p>
-        I'd been working in the sport journalism for 10 years before last autumn
-        (last 3 years as a Deputy Editor-in-chief of "Pressball", the most popular
-        sport edition and web site in Belarus). My duties included correspondence
-        with different foreign structures (for instance, International Olympic
-        committee) and business trips, where I had an opportunity to apply
-        language skills and keep it active.
-      </p>
-      <p>
-        Besides, I translated some own essays for international competition (The
-        AIPS Sport Media Awards). In addition, for two years I've been working as
-        a Venue Data Coordinator at international football matches under the aegis
-        UEFA, where all communication is in English.
-      </p>
+      <article class="about__person">
+        <h2 class="start">Short introduction</h2>
+        <p>
+          My goal is to become a professional Java Script developer. I've never
+          worked in this field before, but to change the area you're used to and to
+          leave a comfort zone is common practice in many Western countries. I'm
+          actually interested in this new experience, I learn fast and I've already
+          jumped in, because the main part of any process is always self-education
+          and own desire to become better.
+        </p>
+        <h2>Skills</h2>
+        <p>
+          <ul>
+            <li>HTML, CSS (fundamentals)</li>
+            <li>Java Script (fundamentals)</li>
+          </ul>
+        </p>
+        <h2>Experience</h2>
+        <p>2018. Java Fundamentals Course by IT-Academy</p>
+        <p>
+          2021. Video Course on udemy.com "The Complete JavaScript Course 2021: From
+          Zero to Expert!" by Jonas Schmedtmann
+        </p>
+        <h2>Code example</h2>
+        <p>
+          <code>
+            // Tabbed component tabsContainer.addEventListener('click', function (e)
+            {<br>
+            const clicked = e.target.closest('.operations__tab');<br>
+            <br />
+            // Guard clause<br>
+            if (!clicked) return;<br>
+            <br>
+            // Remove active classes<br>
+            tabs.forEach(t => t.classList.remove('operations__tab--active'));<br>
+            tabsContent.forEach(c => c.classList.remove('operations__content--active'));<br>
+            <br>
+            // Activate tab<br>
+            clicked.classList.add('operations__tab--active');<br>
+            <br>
+            // Activate content area<br>
+            document<br>
+            .querySelector(`.operations__content--${clicked.dataset.tab}`)<br>
+            .classList.add('operations__content--active');<br>
+            });
+          </code>
+        </p>
+        <h2>Education</h2>
+        <p>
+          2007 — 2012. Belorussian National Technical University with a degree in
+          economics
+        </p>
+        <p>
+          2012 — 2013. Belorussian National Technical University (master courses)
+        </p>
+        <p> *Graduated with excellent certificate in economics
+        </p>
+        <h2>Language</h2>
+        <p>
+          English, B2. I successfully completed Streamline English Course at Upper
+          Intermediate level in 2019.
+        </p>
+        <p>
+          I'd been working in the sport journalism for 10 years before last autumn
+          (last 3 years as a Deputy Editor-in-chief of "Pressball", the most popular
+          sport edition and web site in Belarus). My duties included correspondence
+          with different foreign structures (for instance, International Olympic
+          committee) and business trips, where I had an opportunity to apply
+          language skills and keep it active.
+        </p>
+        <p>
+          Besides, I translated some own essays for international competition (The
+          AIPS Sport Media Awards). In addition, for two years I've been working as
+          a Venue Data Coordinator at international football matches under the aegis
+          UEFA, where all communication is in English.
+        </p>
+      </article>
     </main>
+
+    <footer>
+      <div class="footer__items">
+        <div class="rs__logo">
+          <a href="https://rs.school/js/">
+              <img src="rs_school_js_logo.svg" alt="RS School logo">
+          </a>
+        </div>
+        <p class="footer__info">
+          <a href="https://github.com/artsiomfando" class="github__info">Artsiom Fando GitHub</a>, 2021.
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
